--- a/style.css
+++ b/style.css
@@ -1,3 +1,11 @@
+/*
+Copyright (c) 2025 Avdesh Jadon (LoanManager)
+All Rights Reserved.
+Proprietary and Confidential – Unauthorized copying, modification, or distribution of this file,
+via any medium, is strictly prohibited without prior written consent from Avdesh Jadon.
+*/
+
+
 :root {
   --primary: #4a55a2;
   --secondary: #6d28d9;
